--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <main>
     <img src="images/deo.png" alt="Deo puma">
     <div id="bordGeo"></div>
+    <p>-40</p>
   </main>
+  <!--                                  
+    Made by rthiar.         
+    ╔═══╗╔════╗╔╗ ╔╗╔══╗╔═══╗╔═══╗
+    ║╔═╗║║╔╗╔╗║║║ ║║╚╗╔╝║╔═╗║║╔═╗║
+    ║╚═╝║╚╝║║╚╝║╚═╝║ ║║ ║║ ║║║╚═╝║
+    ║╔╗╔╝  ║║  ║╔═╗║ ║║ ║╚═╝║║╔╗╔╝
+    ║║║╚╗  ║║  ║║ ║║╔╝╚╗║╔═╗║║║║╚╗
+    ╚╝╚═╝  ╚╝  ╚╝ ╚╝╚══╝╚╝ ╚╝╚╝╚═╝                         
+    -->
 </body>
 </html>
